--- a/src/DEBYE/SConstruct
+++ b/src/DEBYE/SConstruct
@@ -18,8 +18,7 @@ lib_src = Split('sigcl.f  sigm3.f  sigms.f  sigrem.f  sigte3.f')
 deps = ('COMMON/wlog', 'COMMON/str', 'COMMON/itoken', 'COMMON/pertab',
         'COMMON/chopen', 'MATH/dist', 'PAR/sequential')
 
-env.SharedLibrary('libfeffdw', lib_src + FindOtherObjects(deps, env))
+env.Library('libfeffdw', lib_src) # + FindOtherObjects(deps, env))
 
-env.Install(ienv['i_lib'], 'libfeffdw' + env['SHLIBSUFFIX'])
-
-env.Alias('install', ienv['i_lib'])
+#env.Install(ienv['i_lib'], 'libfeffdw' + env['LIBSUFFIX'])
+#env.Alias('install', ienv['i_lib'])
