--- a/src/FOVRG/SConstruct
+++ b/src/FOVRG/SConstruct
@@ -16,10 +16,9 @@ ienv = InstallEnvironment()
 lib_src = Split('aprdec.f aprdep.f dfovrg.f diff.f dsordc.f inmuac.f intout.f  muatcc.f nucdec.f ortdac.f \
                  potdvp.f potex.f solin.f solout.f wfirdc.f yzkrdc.f yzktec.f')
 
-env.SharedLibrary('libfeffpha', lib_src,
-                  LIBS = ['feffcom', 'feffmath'], \
-                  LIBPATH = [join('..','COMMON'), join('..','MATH')])
+env.Library('libfeffpha', lib_src)
+#                  LIBS = ['feffcom', 'feffmath'], \
+#                  LIBPATH = [join('..','COMMON'), join('..','MATH')])
 
-env.Install(ienv['i_lib'], 'libfeffpha' + env['SHLIBSUFFIX'])
-
-env.Alias('install', ienv['i_lib'])
+#env.Install(ienv['i_lib'], 'libfeffpha' + env['SHLIBSUFFIX'])
+#env.Alias('install', ienv['i_lib'])
