--- a/src/PATH/SConstruct
+++ b/src/PATH/SConstruct
@@ -17,14 +17,15 @@ bin_src = Split('ffmod4.f   ccrit.f   heap.f    ipack.f   mcrith.f  mcritk.f  mp
                  mpprmp.f   mrb.f     outcrt.f  repath.f  paths.f   pathsd.f  phash.f  \
                  prcrit.f   sortix.f  timrep.f')
 
-env.Program('pathfinder', bin_src,
-            FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC',
-            OBJSUFFIX = env['SHOBJSUFFIX'],
-            LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
-            LIBPATH = [join('..','COMMON'), join('..','json-fortran'), join('..','JSON/'), join('..','MATH'), join('..','PAR')])
-env.Depends('repath'+env['SHOBJSUFFIX'], join('..', 'json-fortran', 'libjsonfortran.a'))
+libs = [join('..', 'json-fortran', 'libjsonfortran.a'),
+        join('..', 'COMMON', 'libfeffcom.a'),
+        join('..', 'PAR',    'libfeffpar.a'),
+        join('..', 'MATH',   'libfeffmath.a'),
+        join('..', 'JSON',   'libfeffjson.a'),
+    ]
+
+env.Program('pathfinder', bin_src + libs)
 
 env.Install(ienv['i_bin'], 'pathfinder')
-
 env.Alias('install', ienv['i_bin'])
 
