--- a/src/COMMON/SConstruct
+++ b/src/COMMON/SConstruct
@@ -18,10 +18,23 @@ lib_src = Split('chopen.f  fixvar.f  head.f    itoken.f  pertab.f  rdcmt.f   rdx
                  str2dp.f  fixdsx.f  getxk.f   isnum.f   padlib.f  qsorti.f  rdpot.f   setkap.f \
                  wlog.f')
 
-deps = ('PAR/sequential', 'MATH/terp', 'MATH/polint')
+#deps = ('PAR/sequential', 'MATH/terp', 'MATH/polint')
 
-env.SharedLibrary('libfeffcom', lib_src + FindOtherObjects(deps, env))
+env.Library('libfeffcom', lib_src) # + FindOtherObjects(deps, env, 'static'))
 
-env.Install(ienv['i_lib'], 'libfeffcom' + env['SHLIBSUFFIX'])
+## needed for libonepath and libfeffpath shared objects
+env.SharedObject('wlog'  +env['SHOBJSUFFIX'], source='wlog.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('chopen'+env['SHOBJSUFFIX'], source='chopen.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('getxk' +env['SHOBJSUFFIX'], source='getxk.f',  FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('head'  +env['SHOBJSUFFIX'], source='head.f',   FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('padlib'+env['SHOBJSUFFIX'], source='padlib.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('pertab'+env['SHOBJSUFFIX'], source='pertab.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('pijump'+env['SHOBJSUFFIX'], source='pijump.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('rdxsph'+env['SHOBJSUFFIX'], source='rdxsph.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('setgam'+env['SHOBJSUFFIX'], source='setgam.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('setkap'+env['SHOBJSUFFIX'], source='setkap.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+env.SharedObject('str'   +env['SHOBJSUFFIX'], source='str.f',    FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
 
-env.Alias('install', ienv['i_lib'])
+
+#env.Install(ienv['i_lib'], 'libfeffcom' + env['SHLIBSUFFIX'])
+#env.Alias('install', ienv['i_lib'])
