--- a/src/FMS/SConstruct
+++ b/src/FMS/SConstruct
@@ -17,9 +17,9 @@ lib_src = ['fmsie.f', 'fmspack.f', 'gglu.f', 'ggbi.f', 'ggrm.f', 'gggm.f', 'ggtf
 
 deps = ('COMMON/wlog', 'COMMON/str', 'COMMON/chopen', 'PAR/sequential', 'MATH/lu')
 
-env.SharedLibrary('libfefffms', lib_src + FindOtherObjects(deps, env))
+env.Library('libfefffms', lib_src) # + FindOtherObjects(deps, env))
 
-env.Depends('reafms'+env['SHOBJSUFFIX'], join('..', 'json-fortran', 'libjsonfortran.a'))
+env.Depends('reafms'+env['OBJSUFFIX'], join('..', 'json-fortran', 'libjsonfortran.a'))
 
 ## the following lines would build the fms executable, however the
 ## intent of feff85exafs is that the tasks that use this (XANES, LDOS,
@@ -33,7 +33,6 @@ env.Depends('reafms'+env['SHOBJSUFFIX'], join('..', 'json-fortran', 'libjsonfort
 #        LIBPATH = ['.', join('..','DEBYE'), join('..','COMMON'), join('..','JSON'), join('..','MATH'), join('..','PAR')])
 
 
-env.Install(ienv['i_lib'], 'libfefffms' + env['SHLIBSUFFIX'])
+#env.Install(ienv['i_lib'], 'libfefffms' + env['SHLIBSUFFIX'])
 #env.Install(ienv['i_bin'], 'fms')
-
-env.Alias('install', [ienv['i_lib'], ienv['i_bin']])
+#env.Alias('install', [ienv['i_lib'], ienv['i_bin']])
