--- a/src/JSON/SConstruct
+++ b/src/JSON/SConstruct
@@ -16,18 +16,17 @@ ienv = InstallEnvironment()
 lib_src = ['bailout.f', 'read_geom.f', 'read_atoms.f', 'read_global.f', 'read_fpf0.f',
            'json_xsect.f', 'read_xsect.f', 'json_nnnn.f']
 
-env.SharedLibrary('libfeffjson', lib_src)
+env.Library('libfeffjson', lib_src)
 
-env.Depends(['read_geom'   + env['SHOBJSUFFIX'],
-             'read_atoms'  + env['SHOBJSUFFIX'],
-             'read_global' + env['SHOBJSUFFIX'],
-             'read_fpf0'   + env['SHOBJSUFFIX'],
-             'read_xsect'  + env['SHOBJSUFFIX'],
-             'read_xsect'  + env['SHOBJSUFFIX'],
-             'read_nnnn'   + env['SHOBJSUFFIX'], ], join('..', 'json-fortran', 'libjsonfortran.a'))
+# env.Depends(['read_geom'   + env['OBJSUFFIX'],
+#              'read_atoms'  + env['OBJSUFFIX'],
+#              'read_global' + env['OBJSUFFIX'],
+#              'read_fpf0'   + env['OBJSUFFIX'],
+#              'read_xsect'  + env['OBJSUFFIX'],
+#              'read_xsect'  + env['OBJSUFFIX'],
+#              'read_nnnn'   + env['OBJSUFFIX'], ], join('..', 'json-fortran', 'libjsonfortran.a'))
 
 #            LIBS = ['jsonfortran'],
 
-env.Install(ienv['i_lib'], 'libfeffjson' + env['SHLIBSUFFIX'])
-
-env.Alias('install', ienv['i_lib'])
+#env.Install(ienv['i_lib'], 'libfeffjson' + env['LIBSUFFIX'])
+#env.Alias('install', ienv['i_lib'])
