--- a/src/PAR/SConstruct
+++ b/src/PAR/SConstruct
@@ -21,11 +21,13 @@ env['FORTRANFLAGS'] = flags.replace('-Wall', '')
 
 deps = ('COMMON/wlog', 'COMMON/str', 'COMMON/chopen')
 
-env.SharedLibrary('libfeffpar', ['sequential.f'] + FindOtherObjects(deps, env))
+env.Library('libfeffpar', ['sequential.f']) #  + FindOtherObjects(deps, env))
+
+## needed for libonepath and libfeffpath shared objects
+env.SharedObject('sequential'+env['SHOBJSUFFIX'], source='sequential.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
 
 ## this is what would be needed for MPI compilation...
 ## SharedLibrary('libfeffpar', 'parallel.f')
 
-env.Install(ienv['i_lib'], 'libfeffpar' + env['SHLIBSUFFIX'])
-
-env.Alias('install', ienv['i_lib'])
+#env.Install(ienv['i_lib'], 'libfeffpar' + env['SHLIBSUFFIX'])
+#env.Alias('install', ienv['i_lib'])
