--- a/src/PAR/SConstruct
+++ b/src/PAR/SConstruct
@@ -2,7 +2,7 @@
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
-import sys, re
+import sys, re, os
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment, FindOtherObjects
 from   os.path   import realpath, join
@@ -24,7 +24,8 @@ deps = ('COMMON/wlog', 'COMMON/str', 'COMMON/chopen')
 env.Library('libfeffpar', ['sequential.f']) #  + FindOtherObjects(deps, env))
 
 ## needed for libonepath and libfeffpath shared objects
-env.SharedObject('sequential'+env['SHOBJSUFFIX'], source='sequential.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
+if os.name != 'nt':
+    env.SharedObject('sequential'+env['SHOBJSUFFIX'], source='sequential.f', FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC')
 
 ## this is what would be needed for MPI compilation...
 ## SharedLibrary('libfeffpar', 'parallel.f')
