--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.sconsign.dblite
 *~
 *.pyc
+*.exe
 
 ## nonsense that Feff writes out
 fort.*
@@ -69,3 +70,4 @@ doc/feff8.log
 doc/feff8.out
 doc/feff8.pdf
 doc/feff8.toc
+*.exe
