--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -102,14 +102,25 @@ else:
 
 ## problem seems to be the call to Environment(), whihc overwrites the
 ## PATH stuff from FeffBuild, perhaps move BUILDERS line to FeffBuild...?
-if False and find_executable("swig"):
+
+if find_executable("swig"):
 
     here=os.getcwd()
 
+    ## make the perl/swig builder
+    perlfolder = join(here, 'perl')
+    perltarget = join(here, 'perl', 'feffpath_wrap.c')
+    perlbld  = Builder(action = 'swig -perl5 -outdir '+perlfolder+' -o '+perltarget+' $SOURCE')
+    env.Append(BUILDERS = {'SwigPerl' : perlbld})
+
+    ## make the python/swig builder
+    pythonfolder = join(here, 'python')
+    pythontarget = join(here, 'python', 'feffpath_wrap.c')
+    pythonbld  = Builder(action = 'swig -python -outdir '+pythonfolder+' -o '+pythontarget+' $SOURCE')
+    env.Append(BUILDERS = {'SwigPython' : pythonbld})
+
     ## -- perl wrapper ------------------------------------------------------
     if not isdir('perl'): os.mkdir('perl')
-    bld = Builder(action = 'swig -perl5 -outdir '+here+'/perl -o '+here+'/perl/feffpath_wrap.c $SOURCE')
-    env = Environment(BUILDERS = {'SwigPerl' : bld})
     env.SwigPerl([join(here, 'perl', 'feffpath_wrap.c'), join(here, 'perl', 'FeffPathWrapper.pm')], 'feffpath.i') # builder befined in FeffBuild.py
     Depends([join(here, 'perl', 'feffpath_wrap.c'), join(here, 'perl', 'FeffPathWrapper.pm')], 'feffpath.h')
     if 'SUDO_UID' in os.environ.keys():
@@ -121,8 +132,6 @@ if False and find_executable("swig"):
 
     ## -- python wrapper ----------------------------------------------------
     if not isdir('python'): os.mkdir('python')
-    bld = Builder(action = 'swig -python -outdir '+here+'/python -o '+here+'/python/feffpath_wrap.c $SOURCE')
-    env = Environment(BUILDERS = {'SwigPython' : bld})
     env.SwigPython([join(here, 'python', 'feffpath_wrap.c'), join(here, 'python', 'feffpathwrapper.py')], 'feffpath.i') # builder befined in FeffBuild.py
     Depends([join(here, 'python', 'feffpath_wrap.c'), join(here, 'python', 'feffpathwrapper.py')], 'feffpath.h')
     if 'SUDO_UID' in os.environ.keys():
