--- a/wrappers/python/SConstruct
+++ b/wrappers/python/SConstruct
@@ -43,7 +43,7 @@ else:
 
 b = Builder(action='python setup.py build_ext --inplace',
             chdir=1)
-env = Environment(BUILDERS = {'MyBuild' : b})
+env.Append(BUILDERS = {'MyBuild' : b})
 env.MyBuild('_feffpathwrapper.so', 'feffpath_wrap.c')
 #env.Command('_feffpathwrapper.so', 'feffpath_wrap.c', ['python setup.py build_ext --inplace'])
 env.Depends('_feffpathwrapper.so', join('..','..','src','GENFMT','libfeffpath'+env['SHLIBSUFFIX']))
