fixed an installation error on unix

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ wrappers/perl/src/feffpath.h
 wrappers/perl/src/feffpath_wrap.c
 wrappers/perl/lib/Xray/FeffPathWrapper.pm
 wrappers/perl/feffpath.h
+wrappers/python/feffpath.h
 wrappers/python/feffpath_wrap.c
 wrappers/python/feffpathwrapper.py
 
