--- a/wrappers/fortran/SConstruct
+++ b/wrappers/fortran/SConstruct
@@ -8,12 +8,8 @@ linkdir = ''
 if os.name == 'nt':
     env.PrependENVPath('PATH', os.environ['PATH'])
     import larch
-    from platform import architecture
-    prefix = larch.site_configdata.win_installdir
-    arch   = architecture()[0]
-    dlldir = 'win32'
-    if arch.startswith('64'):
-        dlldir = 'win64'
+    prefix  = larch.site_configdata.win_installdir
+    dlldir  = larch.larchlib.get_dlldir()
     #include = '-L/C/Program Files/larch/dlls/win32' 
     linkdir = '-L'+join(prefix, 'dlls', dlldir)
 
