--- a/wrappers/python/SConstruct
+++ b/wrappers/python/SConstruct
@@ -5,44 +5,26 @@
 
 import os
 from os.path import join, realpath
-if os.name == 'nt':
-    import sys
-    sys.path.append(join('C:', os.sep, 'Program Files', 'Larch', 'bin', 'library.zip'))
-from platform import uname, architecture
+#if os.name == 'nt':
+#    import sys
+#    sys.path.append(join('C:', os.sep, 'Program Files', 'Larch', 'bin', 'library.zip'))
 
 from SCons.Environment import Environment
 
 env  = Environment()
 
 ## figure out where to install the larch bits
-
 import larch
+larch.larchlib.sys_larchdir
+larch.larchlib.get_dlldir() 
 if os.name == 'nt':
-    installdir = larch.site_configdata.win_installdir
     env.PrependENVPath('PATH', os.environ['PATH'])
     env.PrependENVPath('VS90COMNTOOLS', os.environ['VS90COMNTOOLS'])
-else:
-    installdir = larch.site_configdata.unix_installdir
-
-## swiped from larch's dylibs/configure.py
-system = uname()[0]
-arch   = architecture()[0]
-dlldir = None
-if os.name == 'nt':
-    dlldir = 'win32'
-    if arch.startswith('64'):
-        dlldir = 'win64'
-else:
-    if system.lower().startswith('linu'):
-        dlldir = 'linux32'
-        if arch.startswith('64'):    dlldir = 'linux64'
-    elif system.lower().startswith('darw'):
-        dlldir = 'darwin'
 
 
 
 
-b = Builder(action='python setup.py build_ext --inplace --fcompiler=gnu95',
+b = Builder(action='python setup.py build_ext --inplace',
             chdir=1)
 env.Append(BUILDERS = {'MyBuild' : b})
 env.MyBuild('_feffpathwrapper.so', 'feffpath_wrap.c')
