--- a/wrappers/python/SConstruct
+++ b/wrappers/python/SConstruct
@@ -16,7 +16,7 @@ env  = Environment()
 ## figure out where to install the larch bits
 import larch
 #installdir = larch.site_config.larchdir
-installdir = larch.larchlib.sys_larchdir
+installdir = larch.larchlib.larchdir
 dlldir =  larch.larchlib.get_dlldir()
 if os.name == 'nt':
     env.PrependENVPath('PATH', os.environ['PATH'])
